--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -19,14 +19,16 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version != "None"]
-    # - cudatookit-dev
+    - cudatookit
+    - cudnn
   host:
     - pip
     - python >=3.6
     - numpy >=1.6
     - setuptools
     # - nvcc_linux-64
-    # - cudatookit-dev
+    - cudatookit
+    - cudnn
   run:
     - python >=3.6
     - appdirs >=1.4.0
@@ -35,7 +37,8 @@ requirements:
     - pytools >=2011.2
     - numpy >=1.6
     # - nvcc_linux-64
-    # - cudatookit-dev
+    - cudatookit
+    - cudnn
 
 
 test:
