--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -18,16 +18,13 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version != "None"]
-    - cudatookit
-    - cudnn
+    - {{ compiler('cuda') }}
+    -
   host:
     - pip
     - python >=3.6
     - numpy >=1.6
     - setuptools
-    # - nvcc_linux-64
-    - cudatookit
     - cudnn
   run:
     - python >=3.6
@@ -36,8 +33,6 @@ requirements:
     - mako
     - pytools >=2011.2
     - numpy >=1.6
-    # - nvcc_linux-64
-    - cudatookit
     - cudnn
 
 
