do some other stuff

--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -15,11 +15,6 @@ build:
   number: 0
   skip: True  # [py2k or osx]
   script:
-    # CUDA 10.1 moves some headers to `/usr/include`
-    # So add that location last in the header search paths
-    - export CFLAGS="${CFLAGS} -I/usr/include"
-    - export CPPFLAGS="${CPPFLAGS} -I/usr/include"
-    - export CXXFLAGS="${CXXFLAGS} -I/usr/include"
     - "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
@@ -29,7 +24,7 @@ requirements:
     - {{ compiler('cuda') }}
     - cudnn
     - cudatoolkit
-    - nvcc
+    - cmake
   host:
     - pip
     - python >=3.6
