--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [py2k or not linux]
+  skip: True  # [py2k or osx or (win and vc<14)]
   script:
     - "{{ PYTHON }} -m pip install . -vv"
 
