--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -13,8 +13,10 @@ source:
 
 build:
   number: 0
-  skip: True  # [py2k or osx or (win and vc<14)]
+  skip: True  # [py2k or osx]
   script:
+    - export C_INCLUDE_PATH="${CUDA_HOME}/include:${C_INCLUDE_PATH}"
+    - export LIBRARY_PATH="${CUDA_HOME}/lib64:$LIBRARY_PATH"
     - "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
