--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -15,9 +15,9 @@ build:
   number: 0
   skip: True  # [py2k or osx]
   script:
+    - echo ${CUDA_HOME}
     - export C_INCLUDE_PATH=${CUDA_HOME}/include:${C_INCLUDE_PATH}
     - export LIBRARY_PATH=${CUDA_HOME}/lib64:$LIBRARY_PATH
-    - echo ${CUDA_HOME}
     - "{{ PYTHON }} -m pip install . -vvv"
 
 requirements:
@@ -31,6 +31,7 @@ requirements:
     - numpy >=1.6
     - setuptools
     - cudatoolkit
+    - cudnn
   run:
     - python >=3.6
     - appdirs >=1.4.0
