--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -15,9 +15,9 @@ build:
   number: 0
   skip: True  # [py2k or osx]
   script:
-    - export CUDA_HOME=${SRC_DIR}/cuda
-    - export C_INCLUDE_PATH=${CUDA_HOME}/include:${C_INCLUDE_PATH}
-    - export LIBRARY_PATH=${CUDA_HOME}/lib64:$LIBRARY_PATH
+    - export PATH="${PATH}:${CUDA_HOME}/bin"
+    - export C_INCLUDE_PATH="${CUDA_HOME}/include:${C_INCLUDE_PATH}"
+    - export LIBRARY_PATH="${CUDA_HOME}/lib64:$LIBRARY_PATH"
     - "{{ PYTHON }} -m pip install . -vvv"
 
 requirements:
