--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -16,9 +16,9 @@ build:
   skip: True  # [py2k or osx or win]
   script:
     - export PATH="${PATH}:${CUDA_HOME}/bin"
-    - export CUDA_INC_DIR="${CUDA_HOME}/include:${CUDA_INC_DIR}"
+    - export C_INCLUDE_PATH="${CUDA_HOME}/include:${C_INCLUDE_PATH}"
     - export LIBRARY_PATH="${CUDA_HOME}/lib64:$LIBRARY_PATH"
-    - "{{ PYTHON }} -m pip install . -vv"
+    - "{{ PYTHON }} -m pip install . -vvv"
 
 requirements:
   build:
