--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -18,7 +18,8 @@ build:
     - export PATH="${PATH}:${CUDA_HOME}/bin"
     - export C_INCLUDE_PATH="${CUDA_HOME}/include:${C_INCLUDE_PATH}"
     - export LIBRARY_PATH="${CUDA_HOME}/lib64:$LIBRARY_PATH"
-    - "{{ PYTHON }} -m pip install . -vvv"
+    - "{{ PYTHON }} setup.py build"
+    - "{{ PYTHON }} setup.py install"
 
 requirements:
   build:
