--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -15,9 +15,9 @@ build:
   number: 0
   skip: True  # [py2k or osx or win]
   script:
-    - export PATH="${PATH}:${CUDA_HOME}/bin"
-    - export C_INCLUDE_PATH="${CUDA_HOME}/include:${C_INCLUDE_PATH}"
-    - export LIBRARY_PATH="${CUDA_HOME}/lib64:$LIBRARY_PATH"
+    - export PATH=${CUDA_HOME}/bin:$PATH
+    - export CUDA_INC_DIR=${CUDA_HOME}/include:$CUDA_INC_DIR
+    - export LIBRARY_PATH=${CUDA_HOME}/lib64:$LIBRARY_PATH
     - "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
