--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -15,9 +15,9 @@ build:
   number: 0
   skip: True  # [py2k or osx or win]
   script:
-    - export PATH="${PATH}:${CUDA_HOME}/bin"
-    - export CUDA_INC_DIR="${CUDA_HOME}/include:$CUDA_INC_DIR"
-    - export LIBRARY_PATH="${CUDA_HOME}/lib64:$LIBRARY_PATH"
+    - export CUDA_HOME=${SRC_DIR}/cuda
+    - export PATH=${CUDA_HOME}/bin:${PATH}
+    - export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:$LD_LIBRARY_PATH
     - "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
