--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -15,8 +15,7 @@ build:
   number: 0
   skip: True  # [py2k or osx or win]
   script:
-    - export CUDA_INC_DIR=${CONDA_PREFIX}/pkgs/cuda-toolkit/include:$CUDA_INC_DIR
-    - export CUDA_HOME=${CONDA_PREFIX}/pkgs/cuda-toolkit
+    - export CUDA_INC_DIR=${CUDA_HOME}/include:$CUDA_INC_DIR
     - export PATH=${CUDA_HOME}/bin:${PATH}
     - export LD_LIBRARY_PATH=${CUDA_HOME}/lib64:$LD_LIBRARY_PATH
     - "{{ PYTHON }} -m pip install . -vv"
