--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -14,6 +14,10 @@ source:
 build:
   number: 0
   skip: True  # [py<=35 or osx or win]
+  script:
+    - export CUDA_HOME="/user/local/cuda"
+    - echo ${CUDA_HOME}
+    - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
