--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -16,6 +16,7 @@ build:
   skip: True  # [py<=35 or osx or win]
   script:
     - export CUDA_HOME="/user/local/cuda"
+    - export PATH=${CUDA_HOME}/bin:${PATH}
     - echo ${CUDA_HOME}
     - {{ PYTHON }} -m pip install . -vv
 
