--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -18,7 +18,8 @@ build:
     - export CUDA_HOME="/user/local/cuda"
     - export PATH=${CUDA_HOME}/bin:${PATH}
     - echo ${CUDA_HOME}
-    - ln -s ${CUDA_HOME}/include/* ${SRC_DIR}/src/cpp/
+    - export CUDA_INC_DIR="${CUDA_HOME}/include/"
+    - {{ PYTHON }} -m ${SRC_DIR}/configure.py
     - {{ PYTHON }} -m pip install . -vv
 
 requirements:
