--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -16,7 +16,7 @@ build:
   skip: True  # [py<=35 or osx or win]
   script:
     - export CUDA_HOME="/user/local/cuda"
-    - export PATH=${CUDA_HOME}/bin:${PATH}
+    - export PATH=${CUDA_HOME}:${PATH}
     - echo ${CUDA_HOME}
     - export CUDA_INC_DIR="${CUDA_HOME}/include/"
     - {{ PYTHON }} -m ${SRC_DIR}/configure.py
