--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -15,9 +15,8 @@ build:
   number: 0
   skip: True  # [py<=35 or osx or win]
   script:
-    - export CUDA_HOME="/user/local/cuda"
-    - export PATH=${CUDA_HOME}:${PATH}
     - echo ${CUDA_HOME}
+    - export PATH="${PATH}:${CUDA_HOME}/bin"
     - export CUDA_INC_DIR="${CUDA_HOME}/include/"
     - {{ PYTHON }} -m ${SRC_DIR}/configure.py
     - {{ PYTHON }} -m pip install . -vv
