--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -14,15 +14,12 @@ source:
 build:
   number: 0
   skip: True  # [py<=35 or osx or win]
-  script_env:                        # [cuda_compiler_version != "None"]
-    - CUDA_HOME                      # [cuda_compiler_version != "None"]
   script:
-    - {{ PYTHON }} -m ${SRC_DIR}/configure.py
+    - {{ PYTHON }} -m ./configure.py
     - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
-    - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version != "None"]
   host:
