--- a/recipes/pycuda/meta.yaml
+++ b/recipes/pycuda/meta.yaml
@@ -16,10 +16,10 @@ build:
   skip: True  # [py<=35 or osx or win]
   script:
     - {{ PYTHON }} -m ./configure.py
-    - {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
+    - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }}  # [linux64 and cuda_compiler_version != "None"]
   host:
