--- a/recipes/pymorphy2-dicts-ru/meta.yaml
+++ b/recipes/pymorphy2-dicts-ru/meta.yaml
@@ -2,11 +2,11 @@
 {% set version = "2.4.404381.4453942" %}
 
 package:
-  name: "{{ name|lower }}"
-  version: "{{ version }}"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: e636a633de4d37b32939fd9f97c1e65b109a5a14f6c87a83d1f44f505020bd4c
 
 build:
@@ -27,11 +27,11 @@ test:
     - pymorphy2_dicts_ru
 
 about:
-  home: "https://github.com/kmike/pymorphy2-dicts/"
+  home: https://github.com/kmike/pymorphy2-dicts/
   license: MIT
   license_family: MIT
-  license_file: 
-  summary: "Russian dictionaries for pymorphy2"
+  license_file: LICENSE.txt
+  summary: 'Russian dictionaries for pymorphy2'
 
 extra:
   recipe-maintainers:
