build.sh add make

--- a/recipes/cockroachdb/meta.yaml
+++ b/recipes/cockroachdb/meta.yaml
@@ -23,7 +23,7 @@ requirements:
 
 test:
   commands:
-    - cockroach --version
+    - cockroach version
 
 about:
   home: https://www.cockroachlabs.com/
