--- a/recipes/cockroachdb/meta.yaml
+++ b/recipes/cockroachdb/meta.yaml
@@ -15,10 +15,8 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - {{ compiler('go') }}
-    - go
+    - {{ compiler('cgo') }}
     - autoconf
     - cmake
     - make
