--- a/recipes/cockroachdb/meta.yaml
+++ b/recipes/cockroachdb/meta.yaml
@@ -17,6 +17,7 @@ requirements:
   build:
     - {{ compiler('cxx') }}
     - {{ compiler('cgo') }}
+    - go-cgo
     - autoconf
     - cmake
     - make
