--- a/recipes/cockroachdb/meta.yaml
+++ b/recipes/cockroachdb/meta.yaml
@@ -15,7 +15,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}
     - {{ compiler('cgo') }}
     - go-cgo
     - autoconf
