--- a/recipes/cockroachdb/meta.yaml
+++ b/recipes/cockroachdb/meta.yaml
@@ -16,7 +16,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
-    - {{ compiler('cgo') }}
+#    - {{ compiler('cgo') }}
     - go-cgo
     - autoconf
     - cmake
